choose calendar name from the form when create a new event

--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -2,6 +2,8 @@
   <p>
     <strong>Calendar:</strong>
     <%= event.calendar_id %>
+    <%# test %>
+    <%# <%= calendar.calendar_name %> 
   </p>
 
   <p>
