--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -4,7 +4,8 @@
 
 <div>
   <%= link_to "Edit this calendar", edit_calendar_path(@calendar) %> |
-  <%= link_to "Back to calendars", calendars_path %>
-
+  <%= link_to "Back to calendars", calendars_path %> |
+<%= link_to "New event", new_event_path %>
   <%= button_to "Destroy this calendar", @calendar, method: :delete %>
+  
 </div>
