update db dropped event table

--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -1,17 +1,12 @@
 <div id="<%= dom_id course %>">
   <p>
-    <strong>Event:</strong>
-    <%= course.event_id %>
+    <strong>Calendar:</strong>
+    <%= course.calendar_id %>
   </p>
 
   <p>
-    <strong>Event name:</strong>
-    <%= course.event_name %>
-  </p>
-
-  <p>
-    <strong>Event category:</strong>
-    <%= course.event_category %>
+    <strong>Course name:</strong>
+    <%= course.course_name %>
   </p>
 
   <p>
