--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -12,18 +12,13 @@
   <% end %>
 
   <div>
-    <%= form.label :event_id, style: "display: block" %>
-    <%= form.number_field :event_id %>
+    <%= form.label :calendar_id, style: "display: block" %>
+    <%= form.number_field :calendar_id %>
   </div>
 
   <div>
-    <%= form.label :event_name, style: "display: block" %>
-    <%= form.text_field :event_name %>
-  </div>
-
-  <div>
-    <%= form.label :event_category, style: "display: block" %>
-    <%= form.text_field :event_category %>
+    <%= form.label :course_name, style: "display: block" %>
+    <%= form.text_field :course_name %>
   </div>
 
   <div>
