--- a/app/views/assignments/_form.html.erb
+++ b/app/views/assignments/_form.html.erb
@@ -12,18 +12,13 @@
   <% end %>
 
   <div>
-    <%= form.label :event_id, style: "display: block" %>
-    <%= form.number_field :event_id %>
+    <%= form.label :calendar_id, style: "display: block" %>
+    <%= form.number_field :calendar_id %>
   </div>
 
   <div>
-    <%= form.label :event_name, style: "display: block" %>
-    <%= form.text_field :event_name %>
-  </div>
-
-  <div>
-    <%= form.label :event_category, style: "display: block" %>
-    <%= form.text_field :event_category %>
+    <%= form.label :assignment_name, style: "display: block" %>
+    <%= form.text_field :assignment_name %>
   </div>
 
   <div>
@@ -32,8 +27,8 @@
   </div>
 
   <div>
-    <%= form.label :class_id, style: "display: block" %>
-    <%= form.number_field :class_id %>
+    <%= form.label :course_id, style: "display: block" %>
+    <%= form.number_field :course_id %>
   </div>
 
   <div>
