function re copy the link

--- a/app/views/calendars/_form.html.erb
+++ b/app/views/calendars/_form.html.erb
@@ -26,10 +26,10 @@
     <%= form.check_box :shared %>
   </div>
 
-  <div>
+  <%# <div>
     <%= form.label :invite_token, style: "display: block" %>
-    <%= form.text_field :invite_token %>
-  </div>
+    <%# <%= form.text_field :invite_token %> 
+  <%# </div> %> 
 
   <div>
     <%= form.submit %>
