--- a/app/views/calendars/_week.html.erb
+++ b/app/views/calendars/_week.html.erb
@@ -6,17 +6,10 @@
 
     <body>
         <% require 'Week' %>
-        <div class="container-fluid">
-            <div class="row no-gutters">
-                <% week.load_week.each do |day| %>
-                    <div class="col" style="background: lightblue">
-                    <div class="border border-dark">
-                        <%= render 'day', :d => day %>
-                    </div>
-                    </div>
-                <% end %>
-                <div class="w-100"></div>
-            </div>
+        <div class="calendar-container">
+            <% week.load_week.each do |day| %>
+                <%= render 'day', :d => day %>
+            <% end %>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     </body>
