shareable link with token

--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -15,7 +15,10 @@
       <div class="card-body">
         <div class="invite-box mb-4" data-controller="invite">
           <h5 class="mb-1">Click on the link below to copy and share:</h5>
-            <input onclick="this.select();document.execCommand('copy');" class="calendar-url" id="cb-link-field" type="text" value="<%= new_calendar_user_calendar_url(@calendar) %>" data-target="invite.url" data-group-token="<%= @calendar.invite_token %>"/>
+           
+          
+            <input onclick="this.select();document.execCommand('copy');" class="calendar-url" id="cb-link-field" type="text" value="<%= calendar_url(@calendar) %>" data-target="invite.url" data-group-token="<%= @calendar.invite_token %>"/>
+          
           </div>
         </div>
       </div>
