--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,14 +1,10 @@
 <div class="center jumbotron">
-  <h1>Welcome to the Brandeis Class Hub</h1>
-
-  <h2>
-    This is the home page 
-    
-  </h2>
+<section align="center">
+  <h2>Welcome to the Brandeis Class Hub</h2>
+</section>
 
   <%# <%= link_to "Sign up!", signup_path, class: "btn btn-lg btn-primary" %>
   <%# <%= link_to "Log in!", login_path, class: "btn btn-lg btn-primary" %> 
 </div>
 
-<%# <%= link_to image_tag("logo.svg", alt: "logo", width: "200"),
-                     %> 
+<%= link_to image_tag("branCH.png", alt: "logo", width: "200") %> 
