add seperate buttons for four kinds of events

--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -7,3 +7,10 @@
 <div>
   <%= render 'month', :month => month %>
 </div>
+<br>
+<div>
+  <%= link_to "New course", new_course_path %>
+  <%= link_to "New assignment", new_assignment_path %>
+  <%= link_to "New holiday", new_holiday_path %>
+  <%= link_to "New other event", new_other_event_path %>
+</div>
