--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,11 +6,11 @@
     <%= form_with(model: @user) do |f| %>
       <%= render 'shared/error_messages' %>
       
-      <%= f.label :firstname %>
-      <%= f.text_field :firstname, class: 'form-control' %>
+      <%= f.label :first_name %>
+      <%= f.text_field :first_name, class: 'form-control' %>
 
-      <%= f.label :lastname %>
-      <%= f.text_field :lastname, class: 'form-control' %>
+      <%= f.label :last_name %>
+      <%= f.text_field :last_name, class: 'form-control' %>
 
       <%= f.label :email %>
       <%= f.email_field :email, class: 'form-control' %>
