--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -8,9 +8,20 @@
   <%= render 'month', :month => month %>
 </div>
 <br>
-<div>
-  <%= link_to "New course", new_course_path %>
-  <%= link_to "New assignment", new_assignment_path %>
-  <%= link_to "New holiday", new_holiday_path %>
-  <%= link_to "New other event", new_other_event_path %>
-</div>
+
+<li class="dropdown">
+  <a href="#" id="new-event" class="dropdown-toggle">
+    New Event <b class="caret"></b>
+  </a>
+  <ul id="dropdown-menu" class="dropdown-menu">
+    <%= link_to "New course", new_course_path %>
+    <%= link_to "New assignment", new_assignment_path %>
+    <%= link_to "New holiday", new_holiday_path %>
+    <%= link_to "New other event", new_other_event_path %>
+    <li class="divider"></li>
+    <li>
+      <%= link_to "Log out", #,
+                              data: { "turbo-method": :delete } %>
+    </li>
+  </ul>
+</li>
