--- a/app/views/home/_day.html.erb
+++ b/app/views/home/_day.html.erb
@@ -5,9 +5,17 @@
     </head>
 
     <body>
-        <% month.load_month.each do |week| %>
-                <%= render 'week', :week => week %>
-        <% end %>
+        <% require 'Day' %>
+        <div>
+            <% if day %>
+                <div class="day-calendar-item">
+                    <strong><%= day.day %></strong>
+                    <% day.load_events.each do |event| %>
+                        <p><%= event.other_name %></p>
+                    <% end %>
+                </div>
+            <% end %>
+        </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     </body>
 </html>
