--- a/app/views/home/_month.html.erb
+++ b/app/views/home/_month.html.erb
@@ -5,12 +5,13 @@
     </head>
 
     <body>
-        <% require 'Week' %>
-        <div class="calendar-container">
-            <% week.load_week.each do |day| %>
-                <%= render 'day', :d => day %>
-            <% end %>
-        </div>
+        <% require 'Month' %>
+        <%= link_to "Last Month", home_calendar_path(date: month.prev), method: :post%>
+        <%= link_to "Next Month", home_calendar_path(date: month.next), method: :post%>
+        <%= render 'week_titles' %>
+        <% month.load_month.each do |week| %>
+                <%= render 'week', :week => week %>
+        <% end %>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     </body>
 </html>
