--- a/app/views/home/_week.html.erb
+++ b/app/views/home/_week.html.erb
@@ -5,15 +5,10 @@
     </head>
 
     <body>
-        <% require 'Day' %>
-        <div>
-            <% if d %>
-                <div class="day-calendar-item">
-                    <strong><%= d.day %></strong>
-                    <% d.load_events.each do |event| %>
-                        <p><%= event.other_name %></p>
-                    <% end %>
-                </div>
+        <% require 'Week' %>
+        <div class="calendar-container">
+            <% week.load_week.each do |day| %>
+                <%= render 'day', :day => day %>
             <% end %>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
