--- a/app/views/assignments/_form.html.erb
+++ b/app/views/assignments/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
 
   <div>
-    <%= form.label :assignment_name, style: "display: block" %>
-    <%= form.text_field :assignment_name %>
+    <%= form.label :name, style: "display: block" %>
+    <%= form.text_field :name %>
   </div>
 
   <div>
