--- a/app/views/other_events/_form.html.erb
+++ b/app/views/other_events/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
 
   <div>
-    <%= form.label :other_name, style: "display: block" %>
-    <%= form.text_field :other_name %>
+    <%= form.label :name, style: "display: block" %>
+    <%= form.text_field :name %>
   </div>
 
   <div>
