--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,8 +3,13 @@
   <h2>Welcome to the Brandeis Class Hub</h2>
 </section>
 
-  <%# <%= link_to "Sign up!", signup_path, class: "btn btn-lg btn-primary" %>
-  <%# <%= link_to "Log in!", login_path, class: "btn btn-lg btn-primary" %> 
 </div>
-
+<section align="center" style="padding-bottom: 100px">
 <%= link_to image_tag("branCH.png", alt: "logo", width: "200") %> 
+</section>
+
+<section align="center">
+<%= link_to "Sign up!", "#", class: "btn btn-lg btn-primary" %>
+<%= link_to "Log in!", "#", class: "btn btn-lg btn-primary" %>
+</section>
+
