add more buttons to homepage

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="center jumbotron">
 <section align="center">
-  <h2>Welcome to the Brandeis Class Hub</h2>
+  <h1>Welcome to the Brandeis Class Hub</h1>
 </section>
 
 </div>
@@ -9,7 +9,8 @@
 </section>
 
 <section align="center">
-<%= link_to "Sign up!", "#", class: "btn btn-lg btn-primary" %>
-<%= link_to "Log in!", "#", class: "btn btn-lg btn-primary" %>
+<%= link_to "Sign up", "#", class: "btn btn-lg btn-primary" %>
+<%= link_to "Log in", "#", class: "btn btn-lg btn-primary" %>
+<%= link_to "Calender View", home_calendar_path, class: "btn btn-lg btn-primary" %>
 </section>
 
