update drop down menu

--- a/app/views/assignments/_form.html.erb
+++ b/app/views/assignments/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div>
     <%= form.label :calendar_id, style: "display: block" %>
-    <%= form.select :calendar_id, Calendar.all.collect { |calendar| [calendar.id] } %>
+    <%= form.select :calendar_id, Calendar.all.collect { |calendar| [calendar.calendar_name, calendar.id]}, include_blank:true %>
   </div>
 
   <div>
@@ -28,7 +28,7 @@
 
   <div>
     <%= form.label :course_id, style: "display: block" %>
-    <%= form.number_field :course_id %>
+    <%= form.select :course_id, Course.all.collect { |course| [course.name, course.id]}, include_blank:true %>
   </div>
 
   <div>
