--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div>
     <%= form.label :calendar_id, style: "display: block" %>
-    <%= form.select :calendar_id, Calendar.all.collect { |calendar| [calendar.id] } %>
+    <%= form.select :calendar_id, Calendar.all.collect { |calendar| [calendar.calendar_name, calendar.id]}, include_blank:true %>
   </div>
 
   <div>
@@ -45,7 +45,6 @@
     <%= form.label :professor_last_name, style: "display: block" %>
     <%= form.text_field :professor_last_name %>
   </div>
-
   <div>
     <%= form.label :repetition_frequency, style: "display: block" %>
     <%= form.text_field :repetition_frequency %>
