new tests, added to Readme, cleaned up code

--- a/app/views/home/calendar.html.erb
+++ b/app/views/home/calendar.html.erb
@@ -1,15 +1,22 @@
-<%= link_to "Week View", home_calendar_path(date: @month.current, view: :week), method: :post%>
-<%= link_to "Month View", home_calendar_path(date: @month.current, view: :month), method: :post%>
-<%= link_to "Day View", home_calendar_path(date: @week.current, view: :day), method: :post%>
-<h1 class="text-center">
-    <%= @month.get_month_year %>
-</h1>
-<% if @view.to_s == "month" %>
-    <%= render 'month', :month => @month %>
-<% elsif @view.to_s == "week" %>
-    <%= render 'week_buttons', :week => @week %>
-    <%= render 'week', :week => @week %>
-<% else %>
-    <%= render 'day_buttons', :day => @day %>
-    <%= render 'day', :day => @day %>
-<% end %>
+<head>
+    <title>
+        Calendar <%= @view %> 
+    </title>
+</head>
+<body>
+    <%= link_to "Day View", home_calendar_path(date: @week.current, view: :day), method: :post%>
+    <%= link_to "Week View", home_calendar_path(date: @month.current, view: :week), method: :post%>
+    <%= link_to "Month View", home_calendar_path(date: @month.current, view: :month), method: :post%>
+    <h1 class="text-center">
+        <%= @month.get_month_year %>
+    </h1>
+    <% if @view.to_s == "month" %>
+        <%= render 'month', :month => @month %>
+    <% elsif @view.to_s == "week" %>
+        <%= render 'week_buttons', :week => @week %>
+        <%= render 'week_view', :week => @week %>
+    <% else %>
+        <%= render 'day_buttons', :day => @day %>
+        <%= render 'day', :day => @day %>
+    <% end %>
+</body>
