--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,8 +9,8 @@
 </section>
 
 <section align="center">
-<%= link_to "Sign up", "#", class: "btn btn-lg btn-primary" %>
-<%= link_to "Log in", "#", class: "btn btn-lg btn-primary" %>
+<%# <%= link_to "Sign up", "#", class: "btn btn-lg btn-primary" %>
+<%# <%= link_to "Log in", "#", class: "btn btn-lg btn-primary" %> 
 <%= link_to "Calender View", home_calendar_path, class: "btn btn-lg btn-primary" %>
 </section>
 
