--- a/app/views/home/_day.html.erb
+++ b/app/views/home/_day.html.erb
@@ -5,7 +5,7 @@
     </head>
 
     <body>
-        <% require 'Day' %>
+        <% require_relative '../../lib/day.rb' %>
         <div>
             <% if day %>
                 <div class="day-calendar-item">
