--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -1,4 +1,4 @@
-<% require 'Month' %>
+<% require_relative '../../lib/month.rb' %>
 <% month = Month.new(10, 2022) %>
 <div>
   <h1 class="text-center">
