--- a/app/views/home/_week.html.erb
+++ b/app/views/home/_week.html.erb
@@ -5,7 +5,7 @@
     </head>
 
     <body>
-        <% require 'Week' %>
+        <% require_relative '../../lib/week.rb' %>
         <div class="calendar-container">
             <% week.load_week.each do |day| %>
                 <%= render 'day', :day => day %>
