--- a/app/views/calendars/new.html.erb
+++ b/app/views/calendars/new.html.erb
@@ -5,5 +5,5 @@
 <br>
 
 <div>
-  <%= link_to "Back to calendars", calendars_path %>
+  <%= link_to "Back to calendars", home_calendar_path %>
 </div>
