--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -7,7 +7,7 @@
     <section >
       <h3>
         <%= link_to "Edit this calendar", edit_calendar_path(@calendar) %> |
-        <%= link_to "Back to calendars", calendars_path %>
+        <%= link_to "Back to calendars", home_calendar_path %>
         <%= button_to "Destroy this calendar", @calendar, method: :delete %> 
       </h3>
     </section>
