--- a/app/views/home/calendar.html.erb
+++ b/app/views/home/calendar.html.erb
@@ -32,5 +32,6 @@
         <%= link_to "New other event", new_other_event_path %>
         </li>
     </ul>
+    <%= link_to "create a new calendar", new_calendar_path %>
     </li>
 </body>
