set up many-to-many usercalendar

--- a/app/views/calendars/_calendar.html.erb
+++ b/app/views/calendars/_calendar.html.erb
@@ -7,8 +7,9 @@
   </p>
 
   <p>
-    <strong>Creater:</strong>
-    <%= calendar.users.first.first_name + " " +calendar.users.first.last_name %>
+    <strong>Creator:</strong>
+    <%= calendar.users %>
+    <%# .first.first_name + " " +calendar.users.first.last_name %>
   </p>
 
   <p>
