--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -14,7 +14,7 @@
     <% @calendars.each do |calendar| %>
       <tr>
         <td><%= calendar.calendar_name %></td>
-        <td><%= calendar.users.first.first_name + " " +calendar.users.first.last_name %></td>
+        <td><%= calendar.users%></td>
         <%# <><%= calendar.user_first_name %>
         <td><%= calendar.shared %></td>
         <%# <><%= calendar.invite_token %>
