only creator can edit/delete a calendar

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,7 +21,7 @@
             </a>
             <ul id="dropdown-menu" class="dropdown-menu">
               <li><%= link_to "Profile", current_user %></li>
-              <li><%= link_to "Owned calendars", calendars_url %></li>
+              <li><%= link_to "Calendars", calendars_url %></li>
               <li><%= link_to "Settings", '#' %></li>
               <li class="divider"></li>
               <li>
