--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -5,11 +5,17 @@
 <div class="row">
   <aside class="col-md-4">
     <section >
+    <% if creator?(@calendar) == true %>
       <h3>
         <%= link_to "Edit this calendar", edit_calendar_path(@calendar) %> |
         <%= link_to "Back to calendars", home_calendar_path %>
         <%= button_to "Destroy this calendar", @calendar, method: :delete %> 
       </h3>
+    <% else %>
+      <h3> 
+        <%= link_to "Back to calendars", home_calendar_path %>
+      </h3> 
+    <% end %>
     </section>
     <div <%= @calendar.id %>"  aria-labelledby="heading<%= @calendar.id %>">
       <div class="card-body">
