--- a/app/views/calendars/_calendar.html.erb
+++ b/app/views/calendars/_calendar.html.erb
@@ -8,8 +8,7 @@
 
   <p>
     <strong>Creator:</strong>
-    <%= calendar.users %>
-    <%# .first.first_name + " " +calendar.users.first.last_name %>
+    <%= calendar.users.first.first_name + " " +calendar.users.first.last_name %>
   </p>
 
   <p>
