--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -142,24 +142,49 @@ footer {
     padding: 20px;
 }
 
+.no-gutters {
+    margin-right: 0;
+    margin-left: 0;
 
-/* mixins, variables, etc. */
+    >.col,
+    > [class*="col-"] {
+        padding-right: 0;
+        padding-left: 0;
+    }
 
-@mixin box_sizing {
-  -moz-box-sizing:    border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing:         border-box;
 }
 
+.border {
+    color: black;
+}
 
+.calendar-container {
+    display: grid;
+    grid-template-columns: repeat(7, 200px);
+}
+
+.day-calendar-item {
+    background-color: beige;
+    padding: 20px;
+    text-align: center;
+    border-style: solid;
+    border-width: 1px;
+}
+
+.day_title {
+    text-align: center
+}
 /* forms */
 
 input, textarea, select, .uneditable-input {
   border: 1px solid #bbb;
   width: 100%;
   margin-bottom: 15px;
-  @include box_sizing;
+  -moz-box-sizing:    border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing:         border-box;
 }
+
 input {
   height: auto !important;
 }
@@ -179,20 +204,8 @@ input {
   }
 }
 
-
-.gravatar {
-  float: left;
-  margin-right: 10px;
-}
-
-.gravatar_edit {
-  margin-top: 15px;
-}
-
 /* Dropdown menu */
 
 .dropdown-menu.active {
-  display: block;
-}
-
-
+    display: block;
+  }
