--- a/app/views/home/_day_buttons.html.erb
+++ b/app/views/home/_day_buttons.html.erb
@@ -1,4 +1,4 @@
-<div>
-    <%= link_to "Previous Day", home_calendar_path(date: day.prev, view: :day), method: :post%>
-    <%= link_to "Next Day", home_calendar_path(date: day.next, view: :day), method: :post%>
+<div class="prev-next-button" align="center">
+    <%= link_to "Previous Day", home_calendar_path(date: day.prev, view: :day), method: :post, class:"btn btn-lg btn-primary"%>
+    <%= link_to "Next Day", home_calendar_path(date: day.next, view: :day), method: :post, class:"btn btn-lg btn-primary"%>
 </div>
