--- a/app/views/home/_month.html.erb
+++ b/app/views/home/_month.html.erb
@@ -6,8 +6,12 @@
 
     <body>
         <% require 'Month' %>
-        <%= link_to "Last Month", home_calendar_path(date: month.prev), method: :post%>
-        <%= link_to "Next Month", home_calendar_path(date: month.next), method: :post%>
+
+        <div class="prev-next-button" align="center">
+            <%= link_to "Last Month", home_calendar_path(date: month.prev), method: :post, class:"btn btn-lg btn-primary" %>
+            <%= link_to "Next Month", home_calendar_path(date: month.next), method: :post, class:"btn btn-lg btn-primary" %>
+        </div>
+        
         <%= render 'week_titles' %>
         <% month.load_month.each do |week| %>
                 <%= render 'week', :week => week %>
