--- a/app/views/home/calendar.html.erb
+++ b/app/views/home/calendar.html.erb
@@ -1,9 +1,4 @@
-<head>
-    <title>
-        Calendar <%= @view %> 
-    </title>
-</head>
-<body>
+<div class="container-new" >
     <%= link_to "Day View", home_calendar_path(date: @week.current, view: :day), method: :post%>
     <%= link_to "Week View", home_calendar_path(date: @month.current, view: :week), method: :post%>
     <%= link_to "Month View", home_calendar_path(date: @month.current, view: :month), method: :post%>
@@ -19,19 +14,19 @@
         <%= render 'day_buttons', :day => @day %>
         <%= render 'day', :day => @day %>
     <% end %>
+</div>
 
-    <li class="dropdown" >
-    <a href="#" id="new-event" class="dropdown-toggle">
-        New Event <b class="caret"></b>
-    </a>
-    <ul id="dropdown-menu" class="dropdown-menu">
-        <li>
-        <%= link_to "New course", new_course_path %>
-        <%= link_to "New assignment", new_assignment_path %>
-        <%= link_to "New holiday", new_holiday_path %>
-        <%= link_to "New other event", new_other_event_path %>
-        </li>
-    </ul>
-    <%= link_to "create a new calendar", new_calendar_path %>
+<li class="dropdown" >
+<a href="#" id="new-event" class="dropdown-toggle">
+    New Event <b class="caret"></b>
+</a>
+<ul id="new-event-menu" class="dropdown-menu">
+    <li>
+    <%= link_to "New course", new_course_path %>
+    <%= link_to "New assignment", new_assignment_path %>
+    <%= link_to "New holiday", new_holiday_path %>
+    <%= link_to "New other event", new_other_event_path %>
     </li>
-</body>
+</ul>
+<%= link_to "create a new calendar", new_calendar_path %>
+</li>
