--- a/app/views/home/_day.html.erb
+++ b/app/views/home/_day.html.erb
@@ -1,21 +1,22 @@
-<!doctype html>
-<html lang="en">
-    <head>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    </head>
-
-    <body>
-        <% require 'Day' %>
-        <div>
-            <% if day %>
-                <div class="day-calendar-item">
-                    <strong><%= day.day %></strong><br>
-                    <% day.load_events.each do |event| %>
-                        <%= link_to event.name, "#" %>
+<div>
+    <% require 'Day' %>
+    <div>
+        <% if day %>
+            <div class="day-calendar-item">
+                <strong><%= day.day %></strong><br>
+                <% day.load_events.each do |event| %>
+                    <% if (event.is_a? Holiday) %>
+                    <%    url = "#{holidays_url}/#{event.id}" %>
+                    <% elsif (event.is_a? Assignment) %>
+                    <%    url = "#{assignments_url}/#{event.id}" %>
+                    <% elsif (event.is_a? ClassPeriod) %>
+                    <%    url = "#{class_periods_url}/#{event.id}" %>
+                    <% else %>
+                    <%    url = "#{other_events_url}/#{event.id}" %>
                     <% end %>
-                </div>
-            <% end %>
-        </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    </body>
-</html>
+                    <%= link_to event.name, url %>
+                <% end %>
+            </div>
+        <% end %>
+    </div>
+</div>
