--- a/app/views/home/_week_view.html.erb
+++ b/app/views/home/_week_view.html.erb
@@ -1,2 +1,4 @@
-<%= render 'week_titles' %>
-<%= render 'week', :week => week %>
+<div>
+    <%= render 'week_titles' %>
+    <%= render 'week', :week => week %>
+</div>
