--- a/app/views/home/calendar.html.erb
+++ b/app/views/home/calendar.html.erb
@@ -1,14 +1,10 @@
-<head>
-    <title>
-        Calendar <%= @view %> 
-    </title>
-</head>
-<body class="calendar-page">
+<div class="calendar-page">
 
-    <form align="right" class="datepicker-box" action="home/select_day">
+    <form align="right" class="datepicker-box" action="calendar">
         <h3>Select a Date</h3>
-        <input id="datepicker" type="date" name="current-date" value=<% @day.currentDate %> min="2000-01-01" max="2100-12-31">
-        <input id="submitbutton" type="submit"/>
+        <input id="datepicker" type="date" name="datepicker" value=<% @day.currentDate %> min="2000-01-01" max="2100-12-31">
+        <br>
+        <input id="datepickerButton" type="submit"/>
     </form>
     
     <h1 class="text-center">
@@ -16,15 +12,15 @@
     </h1>
 
     <ul class="nav nav-pills nav-fill justify-content-center bg-light">
-        <li class="nav-item">
+        <li class= '<%= @nav_item_day %>' >
             <%= link_to "Day View", home_calendar_path(date: @week.current, view: :day), method: :post%>
         </li>
 
-        <li class="nav-item">
+        <li class= '<%= @nav_item_week %>'>
             <%= link_to "Week View", home_calendar_path(date: @month.current, view: :week), method: :post%>
         </li>
 
-        <li class="nav-item active">
+        <li class='<%= @nav_item_month %>'>
             <%= link_to "Month View", home_calendar_path(date: @month.current, view: :month), method: :post%>
         </li>
     </ul>
@@ -52,4 +48,4 @@
         </li>
     </ul>
     </li>
-</body>
+</div>
