logged in user can auto subscribe

--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -7,6 +7,7 @@
     <section >
     <% if creator?(@calendar) == true %>
       <h3>
+       <h5 class="mb-1">hello world</h5>
         <%= link_to "Edit this calendar", edit_calendar_path(@calendar) %> |
         <%= link_to "Back to calendars", home_calendar_path %>
         <%= button_to "Destroy this calendar", @calendar, method: :delete %> 
@@ -21,10 +22,7 @@
       <div class="card-body">
         <div class="invite-box mb-4" data-controller="invite">
           <h5 class="mb-1">Click on the link below to copy and share:</h5>
-           
-          
-            <input onclick="this.select();document.execCommand('copy');" class="calendar-url" id="cb-link-field" type="text" value="<%= calendar_url(@calendar) %>" data-target="invite.url" data-group-token="<%= @calendar.invite_token %>"/>
-          
+          <input onclick="this.select();document.execCommand('copy');" class="calendar-url" id="cb-link-field" type="text" value="<%= new_calendar_user_calendar_url(@calendar) %>" data-target="invite.url" data-calendar-token="<%= @calendar.invite_token %>"/>
           </div>
         </div>
       </div>
