--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -11,15 +11,16 @@
   </thead>
 
   <tbody>
-    <% @calendars.each do |calendar| %>
+   
+    <% current_user.user_calendars.each do |calendar| %>
       <tr>
-        <td><%= calendar.calendar_name %></td>
-        <td><%= calendar.users.first.first_name + " " +calendar.users.first.last_name%></td>
+        <td><%= calendar.calendar.calendar_name %></td>
+        <td><%= calendar.calendar.users.first.first_name + " " +calendar.calendar.users.first.last_name%></td>
         <%# <><%= calendar.user_first_name %>
-        <td><%= calendar.shared %></td>
+        <td><%= calendar.calendar.shared %></td>
         <%# <><%= calendar.invite_token %>
         <%# change show to copy token %>
-        <td><%= link_to 'Details', calendar %></td>
+        <td><%= link_to 'Details', calendar.calendar %></td>
         <%# <td><%= link_to 'Edit', edit_calendar_path(calendar) %>
         <%# <td><%= link_to 'Destroy', calendar, method: :delete %>
       </tr>
