--- a/app/views/home/calendar.html.erb
+++ b/app/views/home/calendar.html.erb
@@ -2,7 +2,7 @@
 
     <form align="right" class="datepicker-box" action="calendar">
         <h3>Select a Date</h3>
-        <input id="datepicker" type="date" name="datepicker" value=<% @day.currentDate %> min="2000-01-01" max="2100-12-31">
+        <input id="datepicker" type="date" name="date" value=<% @day.currentDate %> min="2000-01-01" max="2100-12-31">
         <br>
         <input id="datepickerButton" type="submit"/>
     </form>
