--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -217,11 +217,15 @@ input {
 
 
 .calendar-page {
+  margin: 0px;
+  padding: 0px;
   background-color: rgb(255, 223, 180);
 }
 .calendar-container {
     display: grid;
-    grid-template-columns: repeat(7, 200px);
+    grid-template-columns: repeat(7, 150px);
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
 .day-calendar-item {
@@ -235,4 +239,28 @@ input {
 
 .day_title {
     text-align: center
+}
+
+#holidayEvent {
+  background-color: rgb(91, 187, 255);
+  color: rgb(91, 187, 255);
+}
+
+#assignmentEvent {
+  background-color: rgb(126, 255, 126);
+  color: rgb(126, 255, 126)
+}
+
+#classPeriodEvent {
+  background-color: pink;
+  color: pink;
+}
+
+#otherEvent {
+  background-color: rgb(255, 196, 88);
+  color: rgb(255, 196, 88);
+}
+
+.eventFont {
+  color: black;
 }
