--- a/app/views/home/_day.html.erb
+++ b/app/views/home/_day.html.erb
@@ -7,14 +7,20 @@
                 <% day.load_events.each do |event| %>
                     <% if (event.is_a? Holiday) %>
                     <%    url = "#{holidays_url}/#{event.id}" %>
+                    <%    color = 'holidayEvent' %>
                     <% elsif (event.is_a? Assignment) %>
                     <%    url = "#{assignments_url}/#{event.id}" %>
+                    <%    color = 'assignmentEvent' %>
                     <% elsif (event.is_a? ClassPeriod) %>
                     <%    url = "#{class_periods_url}/#{event.id}" %>
+                    <%    color = 'classPeriodEvent' %>
                     <% else %>
                     <%    url = "#{other_events_url}/#{event.id}" %>
+                    <%    color = 'otherEvent' %>
                     <% end %>
-                    <%= link_to event.name, url %>
+                    <div id= '<%= color %>' >
+                        <%= link_to event.name, url, class: "eventFont"%>
+                    </div>
                 <% end %>
             </div>
         <% end %>
