--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div>
     <%= form.label :course_name, style: "display: block" %>
-    <%= form.text_field :course_name %>
+    <%= form.text_field :name %>
   </div>
 
   <div>
