finish CSV uploader

--- a/app/views/assignments/_form.html.erb
+++ b/app/views/assignments/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
 
   <div>
-    <%= form.label :name, style: "display: block" %>
+    <%= form.label :asignment_name, style: "display: block" %>
     <%= form.text_field :name %>
   </div>
 
