--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -25,23 +25,14 @@
   </p>
 
   <p>
-    <strong>Professor first name:</strong>
-    <%= course.professor_first_name %>
+    <strong>Professor:</strong>
+    <%= course.professor_name %>
   </p>
 
-  <p>
-    <strong>Professor last name:</strong>
-    <%= course.professor_last_name %>
-  </p>
 
   <p>
     <strong>Repetition frequency:</strong>
     <%= course.repetition_frequency %>
-  </p>
-
-  <p>
-    <strong>Url:</strong>
-    <%= course.url %>
   </p>
 
 </div>
