--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div>
     <%= form.label :course_name, style: "display: block" %>
-    <%= form.text_field :course_name %>
+    <%= form.text_field :name %>
   </div>
 
   <div>
@@ -37,22 +37,12 @@
   </div>
 
   <div>
-    <%= form.label :professor_first_name, style: "display: block" %>
-    <%= form.text_field :professor_first_name %>
+    <%= form.label :professor_name, style: "display: block" %>
+    <%= form.text_field :professor_name %>
   </div>
 
-  <div>
-    <%= form.label :professor_last_name, style: "display: block" %>
-    <%= form.text_field :professor_last_name %>
-  </div>
-  <div>
     <%= form.label :repetition_frequency, style: "display: block" %>
     <%= form.text_field :repetition_frequency %>
-  </div>
-
-  <div>
-    <%= form.label :url, style: "display: block" %>
-    <%= form.text_field :url %>
   </div>
 
   <div>
