--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -12,3 +12,10 @@
 </div>
 
 <%= link_to "New course", new_course_path %>
+
+
+<h3> Import Courses </h3>
+<%= form_tag import_courses_path, multipart: true do %>
+  <%= file_field_tag :file %>
+  <%= submit_tag "Upload courses" %>
+<% end %>
