--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -264,3 +264,7 @@ input {
 .eventFont {
   color: black;
 }
+
+.main-template {
+  background-image: url("app/assets/images/backgrounds/background1.jpg");
+}
