--- a/app/views/assignments/_assignment.html.erb
+++ b/app/views/assignments/_assignment.html.erb
@@ -1,22 +1,21 @@
-<div id="<%= dom_id assignment %>">
-  <p>
-    <strong>Calendar:</strong>
-    <%= assignment.calendar_id %>
-  </p>
+<div class="container">
+  <div id="<%= dom_id assignment %>">
 
-  <p>
-    <strong>Assignment name:</strong>
-    <%= assignment.name %>
-  </p>
+    <p>
+      <strong>Assignment name:</strong>
+      <br>
+      <%= assignment.name %>
+    </p>
 
-  <p>
-    <strong>Due date:</strong>
-    <%= assignment.due_date %>
-  </p>
+    <p>
+      <strong>Due date:</strong>
+      <%= assignment.due_date %>
+    </p>
 
-  <p>
-    <strong>Course:</strong>
-    <%= assignment.course_id %>
-  </p>
+    <p>
+      <strong>Course:</strong>
+      <%= assignment.course_id %>
+    </p>
 
+  </div>
 </div>
