--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,22 +1,17 @@
-<p style="color: green"><%= notice %></p>
-
-<%= render @user %>
-<% provide(:title, @user.first_name) %>
-
-<div class="row">
-  <aside class="col-md-4">
-    <section class="user_info">
-      <h1>
-        <%= gravatar_for @user %>
-        <%= @user.first_name %>
-      </h1>
-    </section>
-  </aside>
-</div>
-
-<div>
-  <%= link_to "Edit this user", edit_user_path(@user) %> |
-  <%= link_to "Back to users", users_path %>
-
-  <%= button_to "Destroy this user", @user, method: :delete %>
+<div class="container event-box" align="center">
+  <p style="color: green"><%= notice %></p>
+  <h1><%= "#{@user.first_name} #{@user.last_name}" %></h1>
+  <p><%= "#{@user.email}" %></p>
+  <div class="profile-pic">
+    <%= gravatar_for @user %>
+  </div>
+  
+  <div>
+    <%= link_to "Edit", edit_user_path(@user), class:"btn btn-sm btn-primary" %> |
+    <%= link_to "Back", home_calendar_path, class:"btn btn-sm btn-primary"%>
+    
+    <div class="delete-button">
+      <%= button_to "Delete this user", @user, method: :delete, class:"btn btn-sm btn-primary" %>
+    </div>
+  </div>
 </div>
