--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -217,20 +217,22 @@ input {
 
 
 .calendar-page {
-  margin: 0px;
-  padding: 0px;
-  background-color: rgb(255, 223, 180);
+  margin: 100px;
+  padding: 20px;
+  background-color: rgba(121, 121, 121, 0.75);
+  border-radius: 10px;
+  border-width: 10px;
+  border-style: ridge;
 }
 .calendar-container {
     display: grid;
     grid-template-columns: repeat(7, 150px);
-    margin-left: 50px;
-    margin-right: 50px;
 }
 
 .day-calendar-item {
     background-color: #f4fcff;
     padding: 20px;
+    height: 100px;
     text-align: center;
     border-style: solid;
     border-width: 2px;
@@ -238,7 +240,9 @@ input {
 }
 
 .day_title {
-    text-align: center
+  text-align: center;
+  color: rgb(255, 255, 255);
+  font-family: 'Trebuchet MS';
 }
 
 #holidayEvent {
@@ -266,5 +270,49 @@ input {
 }
 
 .main-template {
-  background-image: url("app/assets/images/backgrounds/background1.jpg");
+  background-image: url("backgrounds/background1.jpg");
+  background-size: cover;
+  min-width: 100%;
+
+}
+
+.event-box {
+  border:rgb(44, 44, 44);
+  border-style: solid;
+  border-radius: 5px;
+  border-width: 5px;
+  border-style: ridge;
+  width: 400px;
+  padding: 10px;
+  margin-bottom: 1000px;
+  background-color: rgba(255, 244, 224, 0.5);
+}
+
+.submit-button {
+  background-color: orange;
+}
+
+.view-container {
+  align-items: center;
+  background-color: white;
+  padding: 10px;
+  border-radius: 10px;
+  width: 314px;
+}
+
+#datepicker-submit {
+  width: 100px;
+}
+
+.calendar-label {
+  color: rgb(255, 255, 255);
+  font-family: 'Trebuchet MS';
+}
+
+.delete-button {
+  margin-top: 5px;
+}
+
+.profile-pic {
+  margin-bottom: 5px;
 }
