--- a/app/views/assignments/_form.html.erb
+++ b/app/views/assignments/_form.html.erb
@@ -1,37 +1,39 @@
-<%= form_with(model: assignment) do |form| %>
-  <% if assignment.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(assignment.errors.count, "error") %> prohibited this assignment from being saved:</h2>
+<div class="container event-box" align="center">
+  <%= form_with(model: assignment) do |form| %>
+    <% if assignment.errors.any? %>
+      <div style="color: red">
+        <h2><%= pluralize(assignment.errors.count, "error") %> prohibited this assignment from being saved:</h2>
 
-      <ul>
-        <% assignment.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+        <ul>
+          <% assignment.errors.each do |error| %>
+            <li><%= error.full_message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="input-group input-group-sm mb-3">
+      <%= form.label :calendar_id, style: "display: block" %>
+      <%= form.select :calendar_id, Calendar.all.collect { |calendar| [calendar.calendar_name, calendar.calendar_name]}, include_blank:true %>
+    </div>
+
+    <div class="input-group input-group-sm mb-3">
+      <%= form.label :name, style: "display: block" %>
+      <%= form.text_field :name %>
+    </div>
+
+    <div class="input-group input-group-sm mb-3">
+      <%= form.label :due_date, style: "display: block" %>
+      <%= form.datetime_field :due_date %>
+    </div>
+
+    <div class="input-group input-group-sm mb-3">
+      <%= form.label :course_id, style: "display: block" %>
+      <%= form.select :course_id, Course.all.collect { |course| [course.name, course.id]}, include_blank:true %>
+    </div>
+
+    <div class="input-group input-group-sm mb-3">
+      <%= form.submit :Update, class:"btn btn-lg btn-primary" %>
     </div>
   <% end %>
-
-  <div>
-    <%= form.label :calendar_id, style: "display: block" %>
-    <%= form.select :calendar_id, Calendar.all.collect { |calendar| [calendar.calendar_name, calendar.id]}, include_blank:true %>
-  </div>
-
-  <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
-  </div>
-
-  <div>
-    <%= form.label :due_date, style: "display: block" %>
-    <%= form.datetime_field :due_date %>
-  </div>
-
-  <div>
-    <%= form.label :course_id, style: "display: block" %>
-    <%= form.select :course_id, Course.all.collect { |course| [course.name, course.id]}, include_blank:true %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
