--- a/app/views/holidays/show.html.erb
+++ b/app/views/holidays/show.html.erb
@@ -1,10 +1,22 @@
+<h1>Holiday</h1>
+<div class="container event-box" align="center">
 <p style="color: green"><%= notice %></p>
 
-<%= render @holiday %>
+<div>
+  <p><%= @holiday.name %></p>
+</div>
 
 <div>
-  <%= link_to "Edit this holiday", edit_holiday_path(@holiday) %> |
-  <%= link_to "Back to holidays", holidays_path %>
+  <strong>Date</strong>
+  <p><%= @holiday.date %></p>
+</div>
 
-  <%= button_to "Destroy this holiday", @holiday, method: :delete %>
+<div>
+  <%= link_to "Edit", edit_holiday_path(@holiday), class:"btn btn-sm btn-primary" %> |
+  <%= link_to "Back", home_calendar_path(date: params[:date], view: :month), class:"btn btn-sm btn-primary"%>
+
+  <div class="delete-button">
+    <%= button_to "Delete this assignment", @holiday, method: :delete, class:"btn btn-sm btn-primary" %>
+  </div>
+</div>
 </div>
