--- a/app/views/other_events/edit.html.erb
+++ b/app/views/other_events/edit.html.erb
@@ -5,6 +5,6 @@
 <br>
 
 <div>
-  <%= link_to "Show this other event", @other_event %> |
-  <%= link_to "Back to other events", other_events_path %>
+  <%= link_to "Show this event", @other_event %> |
+  <%= link_to "Back to events", other_events_path %>
 </div>
