--- a/app/views/home/calendar.html.erb
+++ b/app/views/home/calendar.html.erb
@@ -1,31 +1,30 @@
 <div class="calendar-page">
 
-    <form align="right" class="datepicker-box" action="calendar">
-        <h3>Select a Date</h3>
-        <input id="datepicker" type="date" name="date" value=<% @day.currentDate %> min="2000-01-01" max="2100-12-31">
-        <br>
-        <input class="btn btn-lg btn-primary" id="datepicker-submit" type="submit"/>
-    </form>
-
     <h1 class="text-center calendar-label">
         <%= @month.get_month_year %>
     </h1>
+        <form class="datepicker-box" action="calendar">
+            <h3>Select a Date</h3>
+            <input id="datepicker" type="date" name="date" value=<% @day.currentDate %> min="2000-01-01" max="2100-12-31">
+            <br>
+            <input class="btn btn-sm btn-primary" id="datepicker-submit" type="submit"/>
+        </form>
 
-    <div class="view-container">
-        <ul class="nav nav-pills nav-fill justify-content-center bg-light">
-            <li class= '<%= @nav_item_day %>' >
-                <%= link_to "Day View", home_calendar_path(date: @week.current, view: :day), method: :post%>
-            </li>
+        <div class="view-container">
+            <ul class="nav nav-pills nav-fill justify-content-center bg-light">
+                <li class= '<%= @nav_item_day %>' >
+                    <%= link_to "Day View", home_calendar_path(date: @week.current, view: :day), method: :post%>
+                </li>
 
-            <li class= '<%= @nav_item_week %>'>
-                <%= link_to "Week View", home_calendar_path(date: @month.current, view: :week), method: :post%>
-            </li>
+                <li class= '<%= @nav_item_week %>'>
+                    <%= link_to "Week View", home_calendar_path(date: @month.current, view: :week), method: :post%>
+                </li>
 
-            <li class='<%= @nav_item_month %>'>
-                <%= link_to "Month View", home_calendar_path(date: @month.current, view: :month), method: :post%>
-            </li>
-        </ul>
-    </div>
+                <li class='<%= @nav_item_month %>'>
+                    <%= link_to "Month View", home_calendar_path(date: @month.current, view: :month), method: :post%>
+                </li>
+            </ul>
+        </div>
     
     <% if @view.to_s == "month" %>
         <%= render 'month', :month => @month %>
