--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -200,6 +200,7 @@ input {
   margin-top: 5px;
   margin-bottom: 5px;
   width: 200px;
+  display: inline-block;
 }
 
 #datepickerButton {
@@ -232,7 +233,7 @@ input {
 .day-calendar-item {
     background-color: #f4fcff;
     padding: 20px;
-    height: 100px;
+    height: 150px;
     text-align: center;
     border-style: solid;
     border-width: 2px;
@@ -243,6 +244,11 @@ input {
   text-align: center;
   color: rgb(255, 255, 255);
   font-family: 'Trebuchet MS';
+}
+
+.event {
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 #holidayEvent {
@@ -298,6 +304,7 @@ input {
   padding: 10px;
   border-radius: 10px;
   width: 314px;
+  display: inline-block
 }
 
 #datepicker-submit {
